--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord</title>
-
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
-
-<body>
-<!-- Intestazione pagina -->
-    <header></header>
-    <!-- fine intestazione pagina -->
-    <main></main>
-    <footer></footer>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Discord</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body class="debug">
+        <!-- Intestazione pagina -->
+        <header>
+            <div class="header-container">
+                <ul>
+                    <li class="logo">logo</li>
+                    <li class="link">link link link</li>
+                    <li class="login">login</li>
+                </ul>
+            </div>
+        </header>
+        <!-- fine intestazione pagina -->
+        <main>
+            <section class="bg-blue">
+                <div class="container"></div>
+                <div class="box"></div>
+            </section>
+            <section class="bg-white">
+                <div class="container"></div>
+                <div class="box-big"></div>
+                <div class="box-small"></div>
+            </section>
+            <section class="bg-grey">
+                <div class="container"></div>
+                <div class="box-big"></div>
+                <div class="box-small"></div>
+            </section>
+            <section class="bg-white">
+                <div class="container"></div>
+                <div class="box-big"></div>
+                <div class="box-small"></div>
+            </section>
+            <section class="bg-grey">
+                <div class="container"></div>
+                <div class="box"></div>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
