--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             </ul>
         </header>
         <!-- fine intestazione pagina -->
+
+        <!-- corpo pagina con section -->
         <main>
             <section class="bg-blue">
                 <div class="container">
@@ -46,6 +48,9 @@
                 </div>
             </section>
         </main>
+        <!-- fine corpo pagina con section -->
+
+        <!-- inizio parte footer -->
         <footer class="bg-black">
             <div class="container-3">
                 <div class="left-footer"></div>
@@ -63,5 +68,6 @@
                 </div>
             </div>
         </footer>
+        <!-- fine parte footer -->
     </body>
 </html>
